--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: gainsboro;
+} */
+
+html {
+  height: 100%;
+}
+
+
+body {
+  background-color: gainsboro;
+  height: 100%;
+  margin: 0;
 }
 
 code {
